style: fix icon height making page too tall

--- a/www/assets/less/docs.less
+++ b/www/assets/less/docs.less
@@ -5,7 +5,6 @@
 	min-height: 4em;
 
 	&:before {
-		height: 100%;
 		display: block;
 		position: absolute;
 		margin-left: -1.6em;
@@ -25,7 +24,6 @@
 	min-height: 4em;
 
 	&:before {
-		height: 100%;
 		display: block;
 		position: absolute;
 		margin-left: -1.6em;
